# Baku_Apartments

./: .gitignore  README.md  app.py  heyet_evi_model.ipynb  kohne_tikili_model.ipynb  load_data.ipynb  model.pkl  preprocessing_data.ipynb  pyproject.toml  scraper.ipynb  scrapper.py  separating_data.ipynb  test.py  visualization_data.ipynb  yeni_tikili_model.ipynb
config/: config.py
data/: cleaned_data.csv  heyet_evi_data.csv  item.html  items_data.csv  items_data.json  kohne_tikili_data.csv  obyekt_data.csv  ofis_data.csv  qaraj_data.csv  test.html  torpaq_data.csv  yeni_tikili_data.csv
static/: styles.css
